2004-09-07  MenTaLguY <mental@rydia.net>

	* src/livarot/AlphaLigne.cpp, src/livarot/BitLigne.cpp,
	  src/livarot/Ligne.cpp, src/livarot/Path.cpp,
	  src/livarot/PathCutting.cpp, src/livarot/PathSimplify.cpp,
	  src/livarot/Shape.cpp, src/livarot/ShapeMisc.cpp,
	  src/livarot/ShapeSweep.cpp, src/livarot/ShapeSweepUtils.cpp:

	  switch to glib's allocator routines, which have the expected
	  semantics

	* src/livarot/evil-malloc.h: removed

2004-09-07  Ted Gould  <ted@gould.cx>

	* src/color-rgba.h:

	Some comments and some little code clean up things.  Added a couple
	of constructors to make life a little simpler.

2004-09-06  Ted Gould  <ted@gould.cx>
	* src/extension/plugin/gimgrad.cpp, src/extension/implementation/plugin*
	  share/extension/gimpgrad.inkmod, src/extension/system.cpp,
	  src/extension/extension.h:

	Mega commit.  This commit does two things, it adds in the ability to
	do plugins in Inkscape.  This means that there are loadable modules
	that can be used for just about anything.  It also provides a sample
	implementation of a plugin to load GIMP gradients.  This means that
	GIMP gradients can be imported into Inkscape, giving a larger set of
	gradients that can be used in Inkscape.

	Currently, nothing here is really complete, but it is functional.  The
	plugins really only work for input plugins, and the GIMP gradient example
	isn't very robust.  They will come shortly.

2004-09-05  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/display/curve.h, src/display/curve.cpp:
	  Change x,y members to NR::Point.
	  Rename posset (spiced&spiked hot milk) to posSet as per CodingStyle.

	* src/display/curve.cpp (sp_curve_reverse): Previously this
	  routine returned only the last subpath, and made it an open
	  path.  Now it preserves all aspects of the curve other than
	  reversing it.  I believe this change makes no difference to the
	  draw-context and dyna-draw-context callers (though I haven't